# GAMMA

./: CMakeLists.txt  DOSNoMore  LICENSE  Makefile  Makefile.in  NEWS  README  README.html  base.m4  config.guess  config.status  config.sub  configure  gamma  gamma.in
src/: CMakeLists.txt  GamGen.h  Makefile  PyBoost.cc  PyBoost.h  PyGAMMAIF0.h  PyGammaIF.cc  PyGammaIF.h  clean  clean.bat  gamma.h  gammat.i  index.html  index.m4  pygamma.i
src/BWRRelax/: MakeDefs  PyBWR.h  PyBWRIF.cc  PyBWRIF.h  relaxAux.cc  relaxAux.h  relaxBWRIF.h  relaxBWRexch.cc  relaxBWRexch.h  relaxBWRexch.i  relaxCSA.cc  relaxCSA.h  relaxCSA.i  relaxDCSA.cc  relaxDCSA.h  relaxDCSA.i  relaxDQuad.cc  relaxDQuad.h  relaxDip.cc  relaxDip.h  relaxDip.i  relaxExch.cc  relaxExch.h  relaxExch.i  relaxJ.cc  relaxJ.h  relaxJ.i  relaxNMR.cc  relaxNMR.h  relaxNMR.i  relaxProp.cc  relaxProp.h  relaxProp.i  relaxQCSA.cc  relaxQCSA.h  relaxQCSA.i  relaxQuad.cc  relaxQuad.h  relaxQuad.i  relaxRF.cc  (+9 more)
src/Basics/: GBasicsIF.h  Gconstants.cc  Gconstants.h  Gconstants.i  Gutils.cc  Gutils.h  Gutils.i  Isotope.cc  Isotope.h  Isotope.i  Isotope.i.rej  IsotopeData.cc  IsotopeData.h  IsotopeData.i  MakeDefs  ParamSet.cc  ParamSet.h  ParamSet.i  PyBasicsIF.cc  PyBasicsIF.h  SinglePar.cc  SinglePar.h  SinglePar.i  SinglePar.i.rej  StringCut.cc  StringCut.h  StringCut.i  basics.i  clean.bat
src/Bloch/: Bloch.cc  Bloch.h  Bloch.i  BlochAcq.cc  BlochAcq.h  BlochAcq.i  BlochAcquire.cc  BlochAcquire.h  BlochB.cc  BlochB.h  BlochIF.h  BlochK.cc  BlochK.h  BlochM.cc  BlochM.h  BlochMx.cc  BlochMx.h  BlochProp.cc  BlochProp.h  BlochR.cc  BlochR.h  BlochSys.cc  BlochSys.h  BlochSys.i  BlochTraj.cc  BlochTraj.h  DetVec.cc  DetVec.h  MagVec.cc  MagVec.h  MagVec.i  MakeDefs  PyBloch.h  PyBlochIF.cc  PyBlochIF.h  bloch_inc.i  x.cc
src/Deprecated/: DeprecIF.h  MakeDefs  acquire.cc  acquire.h  block_1D.cc  block_1D.h  block_2D.cc  block_2D.h
src/ESRLib/: AngleSet.cc  AngleSet.h  CubicIon.cc  CubicIon.h  CubicIonData.cc  CubicIonData.h  CubicSys.cc  CubicSys.h  ESRAux.cc  ESRAux.h  ESRHam.cc  ESRHam.h  ESRIF.h  Fibre.cc  Fibre.h  MagIon.cc  MagIon.h  MakeDefs  PyESRLib.h  SpinSpace.cc  SpinSpace.h
src/Floquet/: Floq2Op.cc  Floq2Op.h  FloqAcq.cc  FloqAcq.h  FloqOp.cc  FloqOp.h  FloquetIF.h  MakeDefs  PyFloquetIF.cc  PyFloquetIF.h  clean
src/GamIO/: BinIOBase.cc  BinIOBase.h  FrameMaker.cc  FrameMaker.h  FrameMakerC.cc  FrameMakerC.h  FrameMakerM.cc  FrameMakerM.h  FrameMakerP.cc  FrameMakerP.h  FrameMakerS.cc  FrameMakerS.h  FrameMakerSph.cc  FrameMakerSph.h  GammaIOIF.h  Gascii.cc  Gascii.h  Ggnuplot.cc  Ggnuplot.h  Ggnuplot1D.cc  Ggnuplot1D.h  GgnuplotC.cc  GgnuplotC.h  GgnuplotSph.cc  GgnuplotSph.h  ML4DElem.cc  ML4DElem.h  ML4Tag.cc  ML4Tag.h  ML5AF.cc  ML5AF.h  ML5AN.cc  ML5AN.h  ML5DA.cc  ML5DA.h  ML5DElem.cc  ML5DElem.h  ML5Hdr.cc  ML5Hdr.h  ML5Imags.cc  (+41 more)
src/Gradients/: GradIF.h  Gradients2.cc  Gradients2.h  Gradients2.i  GrdAcquire.cc  GrdAcquire.h  GrdAcquire.i  GrdDeprec.cc  GrdDeprec.h  GrdEvolve.cc  GrdEvolve.h  GrdEvolve.i  GrdPulses.cc  GrdPulses.h  GrdPulses.i  MakeDefs  PyGradients.h  PyGradientsIF.cc  PyGradientsIF.h  gradients.i  sys_gradz.cc  sys_gradz.h  sys_gradz.i
src/HSLib/: Basis.cc  Basis.h  Basis.i  Basis.i.rej  Evolve.cc  Evolve.h  Evolve.i  GenOp.cc  GenOp.h  GenOp.i  GenOpRep.cc  GenOpRep.h  GenOpRep.i  HSLibIF.h  HSacquire.cc  HSacquire.h  HSacquire.i  HSanalyze.cc  HSanalyze.h  HSanalyze.i  HSauxil.cc  HSauxil.h  HSauxil.i  HSauxil.i.rej  HSdecomp.cc  HSdecomp.h  HSdecomp.i  HSdetect.cc  HSdetect.h  HSdetect.i  HSham.cc  HSham.h  HSham.i  HSprop.cc  HSprop.h  HSprop.i  MakeDefs  PulseI.cc  PulseI.h  PulseI.i  (+29 more)
src/IntRank2/: CDipT.cc  CartMx2A.cc  CartMx2A.h  CompRot.cc  CompRot.h  CoordFrame.cc  CoordFrame.h  FrameMap.cc  FrameMap.h  HDipolar.cc  HDipolar.h  HElectronG.cc  HElectronG.h  HQuadrup.cc  HQuadrup.h  HShiftAnis.cc  HShiftAnis.h  IntCSA.cc  IntCSA.h  IntCSAVec.cc  IntCSAVec.h  IntDip.cc  IntDip.h  IntDipVec.cc  IntDipVec.h  IntG.cc  IntG.h  IntGVec.cc  IntGVec.h  IntHF.cc  IntHF.h  IntHFVec.cc  IntHFVec.h  IntQuad.cc  IntQuad.h  IntQuadVec.cc  IntQuadVec.h  IntRank2.cc  IntRank2.h  IntRank2A.cc  (+15 more)
src/LSLib/: DensOp.cc  DensOp.h  DensOp.i  LSAux.cc  LSAux.h  LSAux.i  LSLibIF.h  LSacquire.cc  LSacquire.h  LSacquire.i  LSanalyze.cc  LSanalyze.h  LSanalyze.i  LSprop.cc  LSprop.h  LSprop.i  MakeDefs  PyLSLibIF.cc  PyLSLibIF.h  SuperOp.cc  SuperOp.h  SuperOp.i  SuperOp.i.rej  lslib.i  sys_dynamic.cc  sys_dynamic.h  sys_dynamic.i
src/Level1/: ExProcessM.cc  ExProcessM.h  ExProcessM.i  Exponential.cc  Exponential.h  Exponential.i  Level1IF.h  Lorentzian.cc  Lorentzian.h  Lorentzian.i  MakeDefs  PyLevel1.h  PyLevel1IF.cc  PyLevel1IF.h  SpaceT.cc  SpaceT.h  SpaceT.i  SphHarmic.cc  SphHarmic.h  SphHarmic.i  SpinT.cc  SpinT.h  SpinT.i  Wigner.cc  Wigner.h  Wigner.i  WindowFct.cc  WindowFct.h  WindowFct.i  clean  coord.cc  coord.h  coord.i  coord_vec.cc  coord_vec.h  coord_vec.i  level1.i  nmr_tensor.cc  nmr_tensor.h  nmr_tensor.i
src/Level2/: BaseDecomp.cc  BaseDecomp.h  BaseDecomp.i  EAngles.cc  EAngles.h  EAngles.i  Level2IF.h  MakeDefs  MutExch.cc  MutExch.h  MutExch.i  PyLevel2.h  PyLevel2IF.cc  PyLevel2IF.h  Quaternion.cc  Quaternion.h  Quaternion.i  RelaxBas.cc  RelaxBas.h  RelaxBas.i  TrnsTable1D.cc  TrnsTable1D.h  TrnsTable1D.i  TrnsTable1D.i.rej  acquire1D.cc  acquire1D.h  acquire1D.i  acquire1D.i.rej  level2.i
src/Matrix/: MakeDefs  Matrix.i  MatrixIF.h  MxModBas.cc  MxModBas.h  PyMatrixIF.cc  PyMatrixIF.h  _matrix.cc  _matrix.h  col_vector.cc  col_vector.h  col_vector.i  complex.cc  complex.h  complex.i  d_matrix.cc  d_matrix.h  f2c_matrix.h  h_matrix.cc  h_matrix.h  i_matrix.cc  i_matrix.h  matrix.cc  matrix.h  matrix.i  matrix_inc.i  n_matrix.cc  n_matrix.h  py_matrix.cc  py_matrix.h  pyy_matrix.cc  pyy_matrix.h  row_vector.cc  row_vector.h  row_vector.i  row_vector.i.rej
src/MultiSys/: ExProcess.cc  ExProcess.h  ExProcess.i  ExProcess.i.rej  MakeDefs  MultiAux.cc  MultiAux.h  MultiAux.i  MultiAux.i.rej  MultiExch.cc  MultiExch.h  MultiExch.i  MultiExch0.cc  MultiHSLib.cc  MultiHSLib.h  (+34 more)
(+282 files in other folders)
